Fix rating number overlapping title

--- a/static/style5/_detail.scss
+++ b/static/style5/_detail.scss
@@ -132,6 +132,10 @@ div.row {
 
 	div.rating {
 		float: right;
+
+		&:hover {
+			margin-left: 25px;
+		}
 	}
 
 	a.url, div.fake_url {
